--- a/src/main/resources/profile/prod/application.yml
+++ b/src/main/resources/profile/prod/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: prod
   config:
-    import: classpath:/book.yml
+    import: classpath:/chaeking.yml
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: "jdbc:mariadb://localhost:3306/book?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false"
@@ -28,7 +28,7 @@ spring:
     open-in-view: false
     show-sql: true
 server:
-  port: 8082
+  port: 8080
 
 springdoc:
   api-docs:
