--- a/src/main/resources/profile/staging/application.yml
+++ b/src/main/resources/profile/staging/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: book
+    name: chaeking
   profiles:
     active: staging
   config:
@@ -36,7 +36,7 @@ springdoc:
   default-consumes-media-type: application/json
   default-produces-media-type: application/json
   swagger-ui:
-    operations-sorter: method
+    operations-sorter: alpha
     tags-sorter: alpha
     path: /swagger-ui.html
     disable-swagger-default-url: true
