--- a/src/main/resources/profile/local/chaeking.yml
+++ b/src/main/resources/profile/local/chaeking.yml
@@ -1,3 +1,6 @@
 chaeking:
   version: '@project.version@'
   url: http://localhost:${server.port}
+
+  flag:
+    common-request-logging-filter: true
