--- a/src/main/resources/profile/staging/application.yml
+++ b/src/main/resources/profile/staging/application.yml
@@ -27,8 +27,20 @@ spring:
         physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
     open-in-view: false
     show-sql: true
+
+  devtools:
+    add-properties: false
+
 server:
   port: 8080
+  tomcat:
+    basedir: .
+    remote-ip-header: X-Forwarded-For
+    protocol-header: X-Forwarded-Proto
+    accesslog:
+      enabled: true
+      directory: logs
+      pattern: "%{yyyy-MM-dd HH:mm:ss}t %{X-Forwarded-For}i(%h) %l %u \"%r\" %s %b"
 
 springdoc:
   api-docs:
