--- a/src/main/resources/profile/local/application.yml
+++ b/src/main/resources/profile/local/application.yml
@@ -65,3 +65,8 @@ logging:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%-5p}){green} %clr([%22thread]){magenta} %clr(%-40.40logger{39}){cyan} %clr(: %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}){faint}'
   level:
     web: debug
+    org:
+      springframework:
+        web:
+          filter:
+            CommonsRequestLoggingFilter: debug
