banner 설정, logging file 설정

--- a/src/main/resources/profile/prod/application.yml
+++ b/src/main/resources/profile/prod/application.yml
@@ -59,7 +59,8 @@ springdoc:
     - /v1/**
 
 logging:
-  file: logs/chaeking-api.log
+  file:
+    name: logs/check.log
   exception-conversion-word: '%wEx'
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%-5p}){green} %clr([%22thread]){magenta} %clr(%-40.40logger{39}){cyan} %clr(: %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}){faint}'
