--- a/src/main/resources/profile/local/application.yml
+++ b/src/main/resources/profile/local/application.yml
@@ -57,10 +57,11 @@ springdoc:
       theme: nord
   paths-to-match:
     - /v1/**
-    - /test/**
+    - /temp/**
 
 logging:
-  file: logs/check.log
+  file:
+    name: logs/check.log
   exception-conversion-word: '%wEx'
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%-5p}){green} %clr([%22thread]){magenta} %clr(%-40.40logger{39}){cyan} %clr(: %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}){faint}'
