네이버 책 기본 검색 openapi test api 추가

--- a/src/main/resources/profile/local/chaeking.yml
+++ b/src/main/resources/profile/local/chaeking.yml
@@ -4,3 +4,8 @@ chaeking:
 
   flag:
     common-request-logging-filter: true
+
+  book-search:
+    naver:
+      api-url: https://openapi.naver.com
+      client-id: GumRhXrYufSutD5kESbh
