--- a/src/main/resources/profile/local/application.yml
+++ b/src/main/resources/profile/local/application.yml
@@ -70,5 +70,4 @@ logging:
     org:
       springframework:
         web:
-          filter:
-            CommonsRequestLoggingFilter: debug
+          servlet: error
