--- a/src/main/resources/profile/local/application.yml
+++ b/src/main/resources/profile/local/application.yml
@@ -6,8 +6,8 @@ spring:
   config:
     import: classpath:/chaeking.yml
   datasource:
+    url: jdbc:mariadb://localhost:3306/book
     driver-class-name: org.mariadb.jdbc.Driver
-    url: "jdbc:mariadb://localhost:3306/book"
     username: test
     password: test
     hikari:
@@ -25,6 +25,7 @@ spring:
         hbm2ddl.auto: update
         implicit_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        default_batch_fetch_size: 500
     open-in-view: false
     show-sql: true
 
