--- a/src/main/resources/profile/prod/application.yml
+++ b/src/main/resources/profile/prod/application.yml
@@ -7,7 +7,7 @@ spring:
     import: classpath:/chaeking.yml
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url: "jdbc:mariadb://applebox.xyz:3306/book?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false"
+    url: jdbc:mariadb://applebox.xyz:3306/book?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false
     username: test
     password: test
     hikari:
@@ -25,6 +25,7 @@ spring:
         hbm2ddl.auto: update
         implicit_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
+        default_batch_fetch_size: 500
     open-in-view: false
     show-sql: true
 
