:heavy_plus_sign: 약관 웹페이지 템플릿을 위한 Thymeleaf dependency 추가

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -101,7 +105,6 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.1</version>
         </dependency>
-
 
     </dependencies>
 
