:sparkles: 파일 경로 외부에 설정하기 위한 resource handler 설정 추가

--- a/src/main/resources/profile/local/chaeking.yml
+++ b/src/main/resources/profile/local/chaeking.yml
@@ -12,3 +12,8 @@ chaeking:
 
     kakao:
       api-url: https://dapi.kakao.com
+
+  image:
+    url: ${chaeking.url}/etc
+    upload-path: C:/jini/chaeking_images
+    
