--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.15.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
 
     </dependencies>
 
