--- a/src/main/resources/profile/local/application.yml
+++ b/src/main/resources/profile/local/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: local
   config:
-    import: classpath:/chaeking.yml
+    import: chaeking.yml
   datasource:
     url: jdbc:mariadb://localhost:3306/book
     driver-class-name: org.mariadb.jdbc.Driver
