--- a/src/main/resources/profile/staging/application.yml
+++ b/src/main/resources/profile/staging/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: staging
   config:
-    import: classpath:/chaeking.yml
+    import: chaeking.yml
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/book?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false
