--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 ### STS ###
 .apt_generated
 .classpath
@@ -18,6 +24,9 @@ target/
 *.iws
 *.iml
 *.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -28,8 +37,10 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### VS Code ###
 .vscode/
 logs/
-Temp*.java
