:bug: spring cloud release train 관련 bug fix

--- a/chaeking-config/src/main/resources/profile/local/bootstrap.yml
+++ b/chaeking-config/src/main/resources/profile/local/bootstrap.yml
@@ -11,7 +11,8 @@ spring:
       authentication: token
       kv:
         enabled: true
+        default-context: chaeking-config
 #        application-name: chaeking-config
-#        backend: secret
+    #        backend: secret
     #  kv.enabled: true
 
