--- a/chaeking-api/build.gradle
+++ b/chaeking-api/build.gradle
@@ -7,6 +7,7 @@ sourceSets {
 }
 
 dependencies {
+    implementation "$boot:spring-boot-starter-web"
     implementation "$boot:spring-boot-starter-data-jpa"
     implementation "$boot:spring-boot-starter-security"
     implementation "$boot:spring-boot-starter-thymeleaf"
