:package: 패키지명 변경 chaeking-config -> chaeking-test

--- a/chaeking-test/build.gradle
+++ b/chaeking-test/build.gradle
@@ -7,6 +7,7 @@ sourceSets {
 }
 
 dependencies {
+    implementation "$cloud:spring-cloud-config-server"
     implementation "$cloud:spring-cloud-starter-vault-config"
     implementation "$cloud:spring-cloud-starter-bootstrap"
     implementation "$boot:spring-boot-starter-validation"
@@ -19,5 +20,5 @@ dependencyManagement {
 }
 
 tasks.bootJar {
-    archiveFileName.set("chaeking-config.jar")
+    archiveFileName.set("chaeking-test.jar")
 }
