--- a/chaeking-api/build.gradle
+++ b/chaeking-api/build.gradle
@@ -12,11 +12,19 @@ dependencies {
     implementation "$boot:spring-boot-starter-security"
     implementation "$boot:spring-boot-starter-thymeleaf"
     implementation "$boot:spring-boot-starter-validation"
+    implementation "$cloud:spring-cloud-starter-vault-config"
+    implementation "$cloud:spring-cloud-starter-bootstrap"
     implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
     implementation "org.jsoup:jsoup:1.15.2"
     implementation "com.auth0:java-jwt:4.0.0"
     runtimeOnly "org.mariadb.jdbc:mariadb-java-client"
     testImplementation "org.springframework.security:spring-security-test"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "$cloud:spring-cloud-dependencies:2021.0.3"
+    }
 }
 
 tasks.bootJar {
