--- a/chaeking-api/build.gradle
+++ b/chaeking-api/build.gradle
@@ -7,13 +7,13 @@ sourceSets {
 }
 
 dependencies {
-    implementation "$boot:spring-boot-starter-web"
-    implementation "$boot:spring-boot-starter-data-jpa"
-    implementation "$boot:spring-boot-starter-security"
-    implementation "$boot:spring-boot-starter-thymeleaf"
-    implementation "$boot:spring-boot-starter-validation"
-    implementation "$cloud:spring-cloud-starter-vault-config"
-    implementation "$cloud:spring-cloud-starter-bootstrap"
+    implementation "${boot}:spring-boot-starter-web"
+    implementation "${boot}:spring-boot-starter-data-jpa"
+    implementation "${boot}:spring-boot-starter-security"
+    implementation "${boot}:spring-boot-starter-thymeleaf"
+    implementation "${boot}:spring-boot-starter-validation"
+    implementation "${cloud}:spring-cloud-starter-vault-config"
+    implementation "${cloud}:spring-cloud-starter-bootstrap"
     implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
     implementation "org.jsoup:jsoup:1.15.2"
     implementation "com.auth0:java-jwt:4.0.0"
@@ -23,7 +23,7 @@ dependencies {
 
 dependencyManagement {
     imports {
-        mavenBom "$cloud:spring-cloud-dependencies:2021.0.3"
+        mavenBom "${cloud}:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
 
