--- a/chaeking-api/build.gradle
+++ b/chaeking-api/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation "${boot}:spring-boot-starter-validation"
     implementation "${cloud}:spring-cloud-starter-vault-config"
     implementation "${cloud}:spring-cloud-starter-bootstrap"
+    implementation "${cloud}:spring-cloud-starter-openfeign"
     implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
     implementation "org.jsoup:jsoup:1.15.2"
     implementation "com.auth0:java-jwt:4.0.0"
