:sparkles: 정보나루 관련 설정 추가

--- a/chaeking-api/src/main/resources/profile/local/chaeking.yml
+++ b/chaeking-api/src/main/resources/profile/local/chaeking.yml
@@ -14,4 +14,6 @@ chaeking:
   image:
     url: ${chaeking.url}/etc
     upload-path: C:/jini/chaeking_images
-    
+
+  data4library:
+    api-url: https://data4library.kr/api
