--- a/chaeking-api/src/main/resources/profile/prod/chaeking.yml
+++ b/chaeking-api/src/main/resources/profile/prod/chaeking.yml
@@ -14,3 +14,6 @@ chaeking:
   image:
     url: ${chaeking.url}/etc
     upload-path: /usr/local/chaeking/chaeking_images
+
+  data4library:
+    api-url: https://data4library.kr/api
