:tada: chaeking-api-hexagon 서브 프로젝트 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,8 @@ rootProject.name = "chaeking"
 
 include(
     ":chaeking-api-layer",
+    ":chaeking-api-hexagon",
     ":chaeking-test"
 )
+include 'chaeking-api-hexagonal'
+
