--- a/chaeking-api-hexagon/src/main/resources/profile/local/application.yml
+++ b/chaeking-api-hexagon/src/main/resources/profile/local/application.yml
@@ -60,10 +60,10 @@ server:
   port: 8081
   tomcat:
     basedir: .
-    accesslog:
-      enabled: true
-      directory: logs
-      pattern: "%{yyyy-MM-dd HH:mm:ss}t %{X-Forwarded-For}i(%h) %l %u \"%r\" %s %b"
+#    accesslog:
+#      enabled: true
+#      directory: logs
+#      pattern: "%{yyyy-MM-dd HH:mm:ss}t %{X-Forwarded-For}i(%h) %l %u \"%r\" %s %b"
     remoteip:
       protocol-header: X-Forwarded-Proto
       remote-ip-header: X-Forwarded-For
@@ -87,8 +87,8 @@ springdoc:
     - /data4library/**
 
 logging:
-  file:
-    name: logs/check.log
+#  file:
+#    name: logs/check.log
   exception-conversion-word: '%wEx'
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%-5p}){green} %clr([%22thread]){magenta} %clr(%-40.40logger{39}){cyan} %clr(: %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}){faint}'
