--- a/chaeking-api-layer/build.gradle
+++ b/chaeking-api-layer/build.gradle
@@ -14,10 +14,10 @@ dependencies {
     implementation "${boot}:spring-boot-starter-validation"
     implementation "${cloud}:spring-cloud-starter-vault-config"
     implementation "${cloud}:spring-cloud-starter-openfeign"
-    implementation "org.springdoc:springdoc-openapi-ui:1.6.9"
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
     implementation "org.thymeleaf.extras:thymeleaf-extras-springsecurity5"
-    implementation "org.jsoup:jsoup:1.15.2"
-    implementation "com.auth0:java-jwt:4.0.0"
+    implementation 'org.jsoup:jsoup:1.15.3'
+    implementation 'com.auth0:java-jwt:4.2.1'
     runtimeOnly "org.mariadb.jdbc:mariadb-java-client"
     testImplementation "org.springframework.security:spring-security-test"
 }
