--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,6 @@ out/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
@@ -44,3 +41,4 @@ bin/
 ### VS Code ###
 .vscode/
 logs/
+ttt/
