:heavy_plus_sign: h2 database dependency 추가

--- a/chaeking-api-hexagon/build.gradle
+++ b/chaeking-api-hexagon/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.15.3'
     implementation 'com.auth0:java-jwt:4.2.1'
     runtimeOnly "org.mariadb.jdbc:mariadb-java-client"
+    runtimeOnly 'com.h2database:h2'
     testImplementation "org.springframework.security:spring-security-test"
 }
 
