--- a/chaeking-api-hexagon/src/main/resources/profile/local/application.yml
+++ b/chaeking-api-hexagon/src/main/resources/profile/local/application.yml
@@ -7,6 +7,11 @@ spring:
     import:
       - chaeking.yml
       - vault://secret/chaeking-local
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
   datasource:
     url: jdbc:mariadb://localhost:3306/book
     driver-class-name: org.mariadb.jdbc.Driver
@@ -20,10 +25,9 @@ spring:
 #      transaction-isolation: TRANSACTION_READ_UNCOMMITTED
       pool-name: pool-book
   jpa:
-    database-platform: org.hibernate.dialect.MariaDB103Dialect
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
         hbm2ddl.auto: update
         implicit_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
