--- a/chaeking-api-hexagon/build.gradle
+++ b/chaeking-api-hexagon/build.gradle
@@ -42,6 +42,10 @@ dependencyManagement {
     }
 }
 
+clean {
+    delete "src/main/resources/static/docs"
+}
+
 test {
     outputs.dir snippetsDir
     useJUnitPlatform()
@@ -53,6 +57,21 @@ asciidoctor {
     inputs.dir snippetsDir
     dependsOn test
     baseDirFollowsSourceFile()
+    doFirst {
+        println(">>>> Start deleting asciidoctor html files")
+        delete file('src/main/resources/static/docs')
+    }
+    doLast {
+        println(">>>> End of asciidoctor html files deletion!")
+        copy {
+            from "${asciidoctor.outputDir}"
+            into "src/main/resources/static/docs"
+        }
+    }
+}
+
+build {
+    dependsOn asciidoctor
 }
 
 bootJar {
@@ -61,8 +80,4 @@ bootJar {
         into "static/docs"
     }
     archiveFileName.set("chaeking-api.jar")
-    copy {
-        from "${asciidoctor.outputDir}"
-        into "src/main/resources/static/docs"
-    }
 }
