--- a/chaeking-api-hexagon/src/main/resources/profile/staging/application.yml
+++ b/chaeking-api-hexagon/src/main/resources/profile/staging/application.yml
@@ -7,6 +7,11 @@ spring:
     import:
       - chaeking.yml
       - vault://secret/chaeking
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/book?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&tinyInt1isBit=false
