:wrench: [chaeking-api-layer] mail, loggin rollingpolicy 설정 추가

--- a/chaeking-api-layer/src/main/resources/profile/local/application.yml
+++ b/chaeking-api-layer/src/main/resources/profile/local/application.yml
@@ -46,10 +46,12 @@ spring:
         default-context: chaeking-local
 
   mail:
-    host: smtp.gmail.com
-    port: 587
-    protocol: smtp
-    default-encoding: UTF-8
+    host: smtp.daum.net
+    port: 465
+    username: coco.2222
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
 
 server:
   port: 8081
@@ -93,3 +95,7 @@ logging:
       springframework:
         web:
           servlet: debug
+  logback:
+    rollingpolicy:
+      file-name-pattern: ${LOG_FILE}.%d{yyyy-MM-dd}-%i.log
+      max-history: 10
