:heavy_plus_sign: [chaeking-api-layer] spring-boot-starter-mail 의존성 추가

--- a/chaeking-api-layer/build.gradle
+++ b/chaeking-api-layer/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation "${boot}:spring-boot-starter-security"
     implementation "${boot}:spring-boot-starter-thymeleaf"
     implementation "${boot}:spring-boot-starter-validation"
+    implementation "${boot}:spring-boot-starter-mail"
     implementation "${cloud}:spring-cloud-starter-vault-config"
     implementation "${cloud}:spring-cloud-starter-openfeign"
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
