--- a/chaeking-api-layer/src/main/resources/profile/local/application.yml
+++ b/chaeking-api-layer/src/main/resources/profile/local/application.yml
@@ -16,14 +16,13 @@ spring:
       auto-commit: false
       connection-test-query: SELECT 1
       minimum-idle: 10
-      maximum-pool-size: 50
-#      transaction-isolation: TRANSACTION_READ_UNCOMMITTED
+      maximum-pool-size: 10
       pool-name: pool-book
   jpa:
     database-platform: org.hibernate.dialect.MariaDB103Dialect
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
         hbm2ddl.auto: update
         implicit_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
         physical_naming_strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
@@ -54,7 +53,7 @@ spring:
       mail.smtp.ssl.enable: true
 
 server:
-  port: 8081
+  port: 8080
   tomcat:
     basedir: .
     accesslog:
