:wrench: prod profile     common-request-logging-filter 값 true로 변경

--- a/chaeking-api-layer/src/main/resources/profile/prod/chaeking.yml
+++ b/chaeking-api-layer/src/main/resources/profile/prod/chaeking.yml
@@ -2,7 +2,7 @@ chaeking:
   url: https://api.chaeking.com
 
   flag:
-    common-request-logging-filter: false
+    common-request-logging-filter: true
 
   book-search:
     naver:
